Fix RTL layout problems

--- a/style.css
+++ b/style.css
@@ -75,6 +75,13 @@ main {
     padding-right: 10%;
 }
 
+[dir="rtl"] main {
+    left: unset;
+    right: 250px;
+    padding-left: 10%;
+    padding-right: 5%;
+}
+
 main a.app {
     display: block;
     min-height: 5em;
@@ -104,12 +111,22 @@ main a.app h2.name {
     font-size: 1.2em;
 }
 
+[dir="rtl"] main a.app h2.name {
+    margin-left: unset;
+    margin-right: 4em;
+}
+
 main a.app p.author, main a.app p.description {
     margin: 0;
     margin-left: 4.8em;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+[dir="rtl"] main a.app p.author, [dir="rtl"] main a.app p.description {
+    margin-left: unset;
+    margin-right: 4.8em;
 }
 
 main a.app .screenshots {
@@ -138,6 +155,11 @@ nav {
     padding-top: 1em;
     padding-bottom: 1em;
     z-index: 1;
+}
+
+[dir="rtl"] nav {
+    left: unset;
+    right: 0;
 }
 
 nav li {
@@ -217,6 +239,11 @@ nav li a[data-page="installed"].selected {
         left: 200px;
         width: calc(100% - 200px);
     }
+
+    [dir="rtl"] main {
+        left: unset;
+        right: 200px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -262,5 +289,10 @@ nav li a[data-page="installed"].selected {
         padding-bottom: 3em;
         padding-left: 5%;
         padding-right: 5%;
+    }
+
+    [dir="rtl"] main {
+        left: unset;
+        right: 0;
     }
 }
